# type-builder

./: .gitignore  CMakeLists.txt  README.md  make.sh  makefile
src/: CMakeLists.txt
src/include/: CMakeLists.txt  basic_number.hpp  basic_number_core.hpp  basic_number_flags.hpp  basic_number_streams.hpp  physical.hpp  policy_types.hpp  safe_int.hpp
src/test/: CMakeLists.txt  complex_base.cpp  constructors.cpp  performance.cpp  physical.cpp  physical.hpp  point.cpp  safe_int.cpp  safe_int_static.cpp  speed.cpp  test.cpp
